# nvm_to_openmvg

./: CMakeLists.txt  LICENSE  README.md
nvm_to_openmv/: ioutil.cpp  nvm_to_openmvg.cpp
nvm_to_openmv/io/: ioutil.h  nvmloader.h
